changes to file structure

--- a/src/webfont-snippet.css
+++ b/src/webfont-snippet.css
@@ -1,4 +1,4 @@
-/*  CSS snippet for importing web font formats  */
+ CSS snippet for importing web font formats 
 
   src: url('../fonts/abolition-regular-webfont.eot');
   src: url('../fonts/abolition-regular-webfont.eot?#iefix') format('embedded-opentype'),
