--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@
   box-sizing: border-box;
 } 
 
-
 body {
   color: #878787;
   margin: 0;
@@ -83,34 +82,13 @@ a:hover {
 
 /* Main Styles --------------------- */
 
-/*Navigation*/
-
-  /* .main-header {
-    padding-top: .5em;
-    padding-bottom: 1px;
-    position: fixed;
-		background-color: #fff;
-    box-shadow: 0 1px 4px rgba(0,0,0,.4);    
-		width: 100%;
-    top: 0;
-  } */
-
-  /* 
-  .container {
-		width: 90%;
-		margin: 0 auto;
-	}
-  */
-
-  /* Second Header */
-
 .header {
   padding-top: 100px;
   height: 650px;
   background: 
     linear-gradient(#ffa949, transparent 55%),
     linear-gradient(0deg, #fff, transparent),
-    #ffa949 url('cover-one.jpg') no-repeat center;
+    #ffa949 url('./img/cover-one.jpg') no-repeat center;
   background-size: cover;
 }
 
@@ -182,30 +160,6 @@ a:hover {
 }
 
 
-/* .beaches {
-  color: white;
-  padding: 18% 24%;
-  border-top: 10px solid #ffa949;
-  margin: 0 auto 100px;
-  width: 75%;
-  height: 400px;
-  background: #434a52 url('surfing.jpg') no-repeat center;
-  background-size: cover;
-  box-shadow: inset 0 0 50px 10px rgba(0,0,0, .8);
-  border-radius: 10px;
-} */
-
-/*  
-#beach-text {
-  color: rgba(255, 255, 255, 1);
-  text-transform: uppercase;
-  font-weight: normal;
-  line-height: 1; 
-  font-size: 2.625rem; 
-  margin: auto;
-} 
- */
-
 .map {
   width: 65%;
   height: 400px;
@@ -216,42 +170,16 @@ a:hover {
   margin-bottom: 45px;
 }
 
-/* .beach-select {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-} */
 
 .beach-select {
-  margin: auto;
+  display: block;
+  margin: 0 auto;
   border-radius: 5px;
   border-color:  #ffa949;
   border-width: 2px;
   font-size: 15px;
 }
 
-/* 
-button {
-  margin-left: 120px;
-  margin-right: 30px;
-
-} */
-
-/* .arrow {
-  width: 60px;
-  line-height: 10px;
-  margin-top: 150px;
-} */
-
-
-/* Float Clearfix ------------------ */
-
-/* 
-.group:after {
-  content: "";
-  display: table;
-  clear: both;
-} */
 
 /* Media Queries -------------------- */
 
